      is unreliable; a getpwuid(3) lookup is used instead. (CNY-2722)
    * The number of retries for providing a passphrase when signing
      troves changed from 3 to 5. (CNY-2709)

  o Code Changes:
    * Some incompatibilities with python2.5 have been removed.

  o Bug Fixes:
    * More optimizations for the pathId lookup query times for some
      package builds. (CNY-2742)

Changes in 2.0.12:
  o Build Changes:
    * Conary now warns about some possibly unused build requirements.
      This requires conary-policy 1.0.16 or later. (CNY-2232)
    * Suggested additions to buildRequires lists are now separately
      encoded in the XML build log. (CNY-2621)
    * Loaded recipe modules are no longer tracked in sys.modules (RPL-2409)
    * The source components needed to build everything in a group can
      now be found when the group uses searchPaths. (CNY-2710)
    * The SubscriptionLogWriter (CNY-2622) sometimes caused builds
      to fail.  This issue has been resolved. (CNY-2717)
    * Group builds now store the searchPath used with the built troves in
      the repository. (CNY-2721)

  o Client Changes:
    * Conary will now re-read /etc/resolv.conf if an error occurs when
      resolving a hostname. (CNY-2703)
    * Conary now caches the result of IP lookups and uses the cached
      results if an IP address lookup fails during an update. (CNY-2260)
    * Migrate now preserves local installs only of groups and kernels.
      Before, all manually-installed components and troves that were
      referenced by the group being migrated would be updated instead
      of erased. (CNY-2569)
    * An API (the createSourceTrove() method of client objects) has
      been added which creates source troves without using the
      conary.checkin module. (CNY-2498)

  o Bug Fixes:
    * The internal function _ensureReadableRollbackStatus now directly
      ensures that it collects the necessary state it needs to succeed